--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   firebase_auth: ^4.19.1
   firebase_storage: ^11.7.1
   image_picker: ^1.0.8
+  cloud_firestore: ^4.16.1
+  firebase_database: ^10.5.1
+  firebase_messaging: ^14.8.1
 
 dev_dependencies:
   flutter_test:
